force-app/main/default/objects/Notification_Contact__c/Notification_Contact__c.object-meta.xml
<CustomObject>
    <label>Notification Contact</label>
    <nameField>
        <displayFormat>NC-{0000000}</displayFormat>
        <label>Notification Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>