force-app/main/default/objects/Notification_Contact__c/fields/Contact_Notification_Preference__c.field-meta.xml
<CustomField>
    <fullName>Contact_Notification_Preference__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Field added so that MC can traverse</description>
    <label>Contact Notification Preference</label>
    <referenceTo>Contact_Notification_Preference__c</referenceTo>
    <relationshipLabel>Notification Contacts</relationshipLabel>
    <relationshipName>Notification_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>