force-app/main/default/objects/Notification_Contact__c/fields/ISD_Phone__c.field-meta.xml
<CustomField>
    <fullName>ISD_Phone__c</fullName>
    <description>Field to store contact phone number in 11 digit format for Marketing cloud SMS notification.</description>
    <label>ISD Phone</label>
    <type>Phone</type>
</CustomField>