force-app/main/default/objects/Notification_Contact__c/fields/Notification_Phone__c.field-meta.xml
<CustomField>
    <fullName>Notification_Phone__c</fullName>
    <description>Formula field to fetch Contact MobilePhone field if that is null fetch Phone  field and add &apos;1&apos; at the beginning of the number</description>
    <formula>IF(
	ISBLANK(Contact_Name__r.MobilePhone),
	IF(ISBLANK(Contact_Name__r.Phone),&quot;&quot; , &quot;1&quot; &amp; Contact_Name__r.Phone),
	&quot;1&quot; &amp; Contact_Name__r.MobilePhone
)</formula>
    <label>Notification Phone</label>
    <type>Text</type>
</CustomField>