force-app/main/default/objects/Notification_Contact__c/fields/Service_StatusId__c.field-meta.xml
<CustomField>
    <fullName>Service_StatusId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup field for Service Status</description>
    <label>Service Status</label>
    <referenceTo>Service_Status__c</referenceTo>
    <relationshipLabel>Notification Contacts</relationshipLabel>
    <relationshipName>Notification_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>